# adme

./: .env  Dockerfile  docker-compose.yml  init_db.py  pyproject.toml
app/: app.py
app/api/routers/: auth.py  events.py  health.py  webhook.py
app/core/: database.py  security.py
app/db/migrations/: 01_auth.sql  03_content.sql  99_permissions.sql
app/dependencies/: db.py
app/models/: repository.py  user.py
app/services/: health.py
app/tasks/: ingest.py
client/: Dockerfile  README.md  docker-compose.yml  package.json
client/src/: middleware.ts
client/src/app/: layout.tsx  page.tsx
client/src/app/dashboard/: layout.tsx
client/src/app/login/: page.tsx
client/src/components/auth/: login-form.tsx  signup-form.tsx
client/src/components/ui/: loader.tsx
client/src/components/wrappers/: query-provider.tsx
client/src/db/migrations/: 01_init.sql
client/src/lib/client/: auth-client.ts  (+1 more)
client/src/scripts/: init-db.ts
event_poller/: package.json  tsconfig.json
event_poller/src/: index.tsx
event_poller/src/db/: index.tsx
event_poller/src/jobs/: cron.tsx
event_poller/src/services/: poller.tsx  rabbitmq.ts  userFetcher.tsx
event_poller/src/utils/: githubGraphqlClient.ts  githubRestClient.ts
event_summarizer/: main.py  pyproject.toml  requirements.txt
event_summarizer/db/: db.py
event_summarizer/lib/langgraph/: graph.py  nodes.py  state.py
event_summarizer/lib/rabbitmq/: consumer.py
server/: .env  docker-compose.yml  init_db.py  pyproject.toml
server/app/: app.py
server/app/services/: health.py
server/app/tasks/: ingest.py
(+42 files in other folders)
